testsuite/tests/v1/patterns/complex/non_existing_field/test.out
Error: Unknown member
   ╭─[ <working-dir>/script.lkql:2:23 ]
   │
 2 │ print(root is FooNode(f_not_a_field: FooNode))
   │                       ──────┬──────  
   │                             ╰──────── No member named "f_not_a_field" on the value
───╯
